; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_en_main.c_mlx5e_get_def_tx_moderation.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_en_main.c_mlx5e_get_def_tx_moderation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dim_cq_moder = type { i32, i32, i64 }

@MLX5E_PARAMS_DEFAULT_TX_CQ_MODERATION_PKTS = common dso_local global i32 0, align 4
@MLX5E_PARAMS_DEFAULT_TX_CQ_MODERATION_USEC = common dso_local global i32 0, align 4
@MLX5_CQ_PERIOD_MODE_START_FROM_CQE = common dso_local global i64 0, align 8
@MLX5E_PARAMS_DEFAULT_TX_CQ_MODERATION_USEC_FROM_CQE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast ({ i64, i64 } (i64)* @mlx5e_get_def_tx_moderation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal { i64, i64 } @mlx5e_get_def_tx_moderation(i64 %0) #0 {
  %2 = alloca %struct.dim_cq_moder, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %2, i32 0, i32 2
  store i64 %4, i64* %5, align 8
  %6 = load i32, i32* @MLX5E_PARAMS_DEFAULT_TX_CQ_MODERATION_PKTS, align 4
  %7 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %2, i32 0, i32 1
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @MLX5E_PARAMS_DEFAULT_TX_CQ_MODERATION_USEC, align 4
  %9 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %2, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @MLX5_CQ_PERIOD_MODE_START_FROM_CQE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* @MLX5E_PARAMS_DEFAULT_TX_CQ_MODERATION_USEC_FROM_CQE, align 4
  %15 = getelementptr inbounds %struct.dim_cq_moder, %struct.dim_cq_moder* %2, i32 0, i32 0
  store i32 %14, i32* %15, align 8
  br label %16

16:                                               ; preds = %13, %1
  %17 = bitcast %struct.dim_cq_moder* %2 to { i64, i64 }*
  %18 = load { i64, i64 }, { i64, i64 }* %17, align 8
  ret { i64, i64 } %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
